src/app/home/home.page.scss
.welcome-card ion-img {
  max-height: 35vh;
  overflow: hidden;
}
#statement {
  color: white;
  font-size: 1.5em;
}
.home svg {
  max-width: 100%;
}
ion-title img {
  max-width: 50%;
}

.chart-container{
	position: relative;
	height:40vh;
	width:80vw;
	margin:auto;
}

.center {
  display: flex;
  justify-content: center;
}

